--- a/style.scss
+++ b/style.scss
@@ -163,6 +163,7 @@ img {
   }
 }
 
+/*
 .site-avatar {
   float: left;
   width: 70px;
@@ -179,6 +180,7 @@ img {
     border-radius: 5px;
   }
 }
+*/
 
 .site-info {
   float: left;
