--- a/style.scss
+++ b/style.scss
@@ -202,6 +202,7 @@ img {
   letter-spacing: 1px;
 }
 
+/*
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
@@ -211,6 +212,7 @@ img {
     margin: 3px 0;
   }
 }
+*/
 
 nav {
   float: right;
