--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,8 @@ layout: default
 <article class="page">
 
   <div class="entry">
+    <center>
     {{ content }}
+    </center>
   </div>
 </article>
