--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,6 +18,7 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$bebasNeue:'Bebas Neue', cursive;
 
 // Mobile breakpoints
 @mixin mobile {
