--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about">ABOUT ME</a>
+            <a href="{{ site.baseurl }}/services">SERVICES</a>
+            <a href="{{ site.baseurl }}/blog">BLOG</a>
+            <a href="{{ site.baseurl }}/contact">CONTACT</a>
           </nav>
         </header>
       </div>
