--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $bebasNeue;
   color: $darkerGray;
-  font-weight: bold;
+  /*font-weight: bold;*/
   letter-spacing: 4px;
 
   line-height: 1.7;
@@ -46,18 +46,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 60px;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 50px;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 40px;
 }
 
 h4 {
