--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <article class="page">
-
+  
+  <div class="homepagetitle">
+    <h1>{{ page.title }}</h1>
+  </div>
   <div class="entry">
     <center>
     {{ content }}
