--- a/style.scss
+++ b/style.scss
@@ -289,6 +289,11 @@ footer {
   text-align: center;
 }
 
+.homepagetitle {
+  margin-top: 300px;
+  margin-bottom: 300px;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
