--- a/style.scss
+++ b/style.scss
@@ -292,6 +292,7 @@ footer {
 .homepagetitle {
   margin-top: 300px;
   margin-bottom: 300px;
+  align: center;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
