--- a/style.scss
+++ b/style.scss
@@ -290,8 +290,9 @@ footer {
 }
 
 .homepagetitle {
-  margin-top: 300px;
-  margin-bottom: 300px;
+  margin-top: 175px;
+  margin-bottom: 175px;
+  align: center;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
