--- a/style.scss
+++ b/style.scss
@@ -292,7 +292,7 @@ footer {
 .homepagetitle {
   margin-top: 175px;
   margin-bottom: 175px;
-  align: center;
+  text-align: center;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
